syntax = "proto3";

package protobuf;

option optimize_for = SPEED;

//============================================
//--4>: 服务器共享数据定义
//		服务器逻辑功能相关的需要的枚举和常量
//============================================

//地图自定义属性结构
message AccountInfo{
	string uid = 1;
	string account = 2;
	string password = 3;
	uint32 create_time = 4;
	string option = 5;
	uint32 language = 6;
	string udid = 7;
	string sessionKey = 8;
}